--- a/LaTex/BachelorThesis/arbeit-vorlage-praeambel.tex
+++ b/LaTex/BachelorThesis/arbeit-vorlage-praeambel.tex
@@ -45,6 +45,7 @@
 \usepackage{tabularx} % Für Tabellen mit vorgegeben Größen
 \usepackage{array}
 \usepackage{float}
+\restylefloat{table}
 % Bilder
 \usepackage{graphicx} % Bilder
 \usepackage{color} % Farben
